# dmr-url-shortifier

./: .gitignore  README.md  pyproject.toml
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/links/: models.py  routes.py  services.py  urls.py  views.py
app/links/migrations/: 0001_initial.py
apps/links/: admin.py  di.py  routes.py  services.py  views.py
apps/links/api/: mappers.py  routes.py  schemes.py  views.py
apps/links/domain/: entities.py  exceptions.py  interfaces.py
apps/links/infrastructure/: mapper.py  models.py  repositories.py  services.py  use_cases.py
apps/links/migrations/: 0001_initial.py  0002_rename_shorturl_shorturlmodel_and_more.py
config/: settings.py  urls.py
