[project]
name = "dmr-url-shortifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-modern-rest>=0.4.0",
    "django>=6.0.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "lint>=1.2.1",
    "ruff>=0.15.9",
]
